Fix missing colours for quiz correction marks

--- a/style.less
+++ b/style.less
@@ -136,13 +136,13 @@
 
 // Generic icons
 .icon-checkmark {
-    color: rgb(49, 116, 52);
+    color: rgb(49, 116, 52) !important;
 }
 
 .icon-checkmark2 {
-    color: rgb(255, 176, 0);
+    color: rgb(255, 176, 0) !important;
 }
 
 .icon-cross {
-    color: rgb(149, 46, 46);
+    color: rgb(149, 46, 46) !important;
 }
